--- a/MeditationTrackerREST/bin/main/application.properties
+++ b/MeditationTrackerREST/bin/main/application.properties
@@ -7,4 +7,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/Meditationdb?useSSL=false&&use
 spring.datasource.username=meditator
 spring.datasource.password=meditator
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jmx.default-domain=MeditationTrackerRest
 
