--- a/MeditationTrackerREST/build.gradle
+++ b/MeditationTrackerREST/build.gradle
@@ -13,10 +13,19 @@ repositories {
 	mavenCentral()
 }
 
+
+apply plugin: 'war'
+war {
+  enabled = true
+  archiveName = "${baseName}.war"     // Our app name, as defined in settings.gradle
+  destinationDir = file("./WAR")      // WAR folder under project root directory
+}
+
 dependencies {
 	compile project(':MeditationTrackerJPA')
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	providedRuntime ('org.springframework.boot:spring-boot-starter-tomcat')
 }
